Fixed styles on mobile resolutions, added styles for badge

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,43 @@ input[type="radio"].visually-hidden {
   overflow: hidden;
 }
 
+
+.body__badge-beta {
+    position: fixed;
+    left: -7px;
+    top: 20px;
+    background-color: #ffc107;
+    -webkit-transform: rotate(-45deg) scale(1) skew(0deg) translate(10px);
+    -moz-transform: rotate(-45deg) scale(1) skew(0deg) translate(10px);
+    -o-transform: rotate(-45deg) scale(1) skew(0deg) translate(10px);
+    -ms-transform: rotate(-45deg) scale(1) skew(0deg) translate(10px);
+    transform: rotate(-45deg) scale(1) skew(0deg) translate(10px);
+    text-align: center;
+    color: #000000;
+    padding: 0 0.5em;
+    border-top: 0px;
+    line-height: 20px;
+    margin: 0;
+}
+
+.body__badge-beta::before {
+    content: ' ';
+    position: absolute;
+    left: -20px;
+    top: 0;
+    border-left: 20px solid transparent;
+    border-bottom: 20px solid #ffc107;
+  }
+  
+  .body__badge-beta::after {
+    content: ' ';
+    position: absolute;
+    right: -20px;
+    top: 0px;
+    border-right: 20px solid transparent;
+    border-bottom: 20px solid #ffc107;
+  }
+
 /* ===== General styles ===== */
 
 /* ===== Header styles ===== */
@@ -381,10 +418,15 @@ input[type="radio"].visually-hidden {
 }
 
 .header__description-button {
-    color: #ffffff;
     padding: 10px 22px;
+
+    color: #ffffff;
     border-left: 2px solid #ffffff;
     border-right: 2px solid #ffffff;
+
+    text-transform: uppercase;
+
+    display: inline-block;
 }
 
 .header__description-button:hover {
@@ -674,6 +716,10 @@ input[type="radio"].visually-hidden {
     width: 100%;
     
     object-fit: contain;
+}
+
+.skills__item:nth-of-type(8) .skills__img {
+    object-fit: cover;
 }
 
 .skills__img {
@@ -1353,7 +1399,7 @@ textarea.error {
 /* ===== Adaptive 1200px styles start ===== */
 @media (max-width: 1199.98px) {
     .header {
-        background-position: 380px 50px, 280px 0;
+        background-position: 380px 100px, 280px 0;
     }
 
     .header__content {
@@ -1370,6 +1416,15 @@ textarea.error {
 
     .main__text_pseudo::after {
         left: 269px;
+    }
+
+    .skills__item:nth-of-type(7) .skills__img {
+        width: 56%;
+    }
+
+    .skills__item:nth-of-type(7) .skills__img,
+    .skills__item:nth-of-type(8) .skills__img {
+        object-fit: cover;
     }
 }
 /* ===== Adaptive 1200px styles end ===== */
@@ -1491,6 +1546,10 @@ textarea.error {
         object-fit: cover;
     }
 
+    .skills__item:nth-of-type(8) .skills__img {
+        width: 71%;
+    }
+
     .portfolio__button {
         width: 22%;
     }
@@ -1562,10 +1621,13 @@ textarea.error {
         column-gap: 20px;
     }
 
-    .skills__item:nth-of-type(7) .skills__img,
-    .skills__item:nth-of-type(8) .skills__img {
+    .skills__item:nth-of-type(7) .skills__img {
         width: 75%;
         object-fit: cover;
+    }
+    
+    .skills__item:nth-of-type(8) .skills__img {
+        width: 90%;
     }
 
     .portfolio__button {
@@ -1878,9 +1940,9 @@ textarea.error {
     }
 
     .skills__list {
-        justify-content: flex-start;
+        justify-content: center;
 
-        column-gap: 20px;
+        column-gap: 60px;
     }
 
     .skills__item {
@@ -2053,7 +2115,7 @@ textarea.error {
     }
 
     .skills__item:nth-of-type(8) .skills__img {
-        width: 80%;
+        width: 100%;
     }
 
     .skills__img {
@@ -2098,6 +2160,10 @@ textarea.error {
         padding: 14px 40px;
     }
 
+    .modal__forms {
+        width: 90%;
+    }
+
     .footer__copyright-text {
         text-align: center;
     }
@@ -2107,7 +2173,7 @@ textarea.error {
 /* ===== Adaptive 375px styles end ===== */
 @media (max-width: 375px) {
     .header {
-        background-position: -200px 210px;
+        background-position: -220px -30px;
     }
 
     .menu__lang-link {
@@ -2249,12 +2315,27 @@ textarea.error {
         left: 55px;
     }
 
+    .about__top-part-wrapper,
+    .about__proficiency-wrapper,
+    .contacts__top-part-wrapper {
+        margin-bottom: 150px;
+    }
+
     .skills__item {
         flex-basis: 100%;
     }
+    
+    .skills__title {
+        font-size: calc(30px - 8px);
+        line-height: calc(37px - 8px);
+    }
 
     .skills__item:nth-of-type(7) .skills__img {
-        width: 40%;
+        width: 44%;
+    }
+   
+    .skills__item:nth-of-type(8) .skills__img {
+        width: 100%;
     }
 
     .portfolio__controls .portfolio__button:first-of-type {
@@ -2276,11 +2357,6 @@ textarea.error {
     .main__text_pseudo::after {
         top: 138px;
         left: 55px;
-    }
-
-    .skills__title {
-        font-size: calc(30px - 8px);
-        line-height: calc(37px - 8px);
     }
 
     .contacts__form-input,
